# lakehouse-health-analyzer

./: .gitignore  README.md  pyproject.toml  run_dashboard.py  streamlit_app.py
examples/: analyze_iceberg_table.py
src/: __init__.py
src/analyzers/: base.py  iceberg.py
src/catalogs/: base.py  iceberg.py
src/visualization/: dashboard_utils.py  health_dashboard.py  metrics_dashboard.py
src/visualization/components/: __init__.py  file_metrics.py  historical_snapshots.py  live_stats.py  partition_metrics.py  snapshot_metrics.py
